--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,10 +4,10 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
+        <!--item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home_black_18dp"
-            android:title="Home" />
+            android:title="Home" /-->
         <item
             android:id="@+id/nav_nutrition"
             android:icon="@drawable/nutrition"
