--- a/app/src/main/res/layout/activity_first_aid.xml
+++ b/app/src/main/res/layout/activity_first_aid.xml
@@ -7,9 +7,19 @@
     android:orientation="vertical"
     tools:context="com.android.babyscare.FirstAidActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="First Aid Text"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:ignore="MissingConstraints">
 
+
+        <ExpandableListView
+            android:id="@+id/expandable_first_aid"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
